hphp/test/zend/good/ext/phar/tests/phar_get_supportedcomp4.php
<?php
var_dump(Phar::getSupportedCompression());
?>
===DONE===