hphp/test/zend/bad/ext/phar/tests/phar_get_supported_signatures_002a.php
<?php
var_dump(Phar::getSupportedSignatures());
?>
===DONE===